Feat: Add admin UI with some changes

--- a/TrainingManager/Views/Home/Index.cshtml
+++ b/TrainingManager/Views/Home/Index.cshtml
@@ -2,7 +2,11 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="landing-section">
+    <div class="landing-overlay">
+        <h1>Welcome to Our Training Management System</h1>
+        <p>Manage summer internships with ease</p>
+        <a href="#get-started" class="btn">Get Started</a>
+    </div>
 </div>
+<section class="min-vh-100"></section>
