--- a/TrainingManager/Views/Account/RegisterTrainee.cshtml
+++ b/TrainingManager/Views/Account/RegisterTrainee.cshtml
@@ -39,11 +39,11 @@
     </div>
 
     <div class="form-group">
-        <label asp-for="Track" class="control-label"></label>
-        <select asp-for="Track" asp-items="@(Html.GetEnumSelectList<Tracks>())">
+        <label asp-for="TrackId" class="control-label"></label>
+        <select asp-for="TrackId" asp-items="@ViewBag.Tracks">
             <option value="-1">Select your Track</option>
         </select>
-        <span asp-validation-for="Track" class="text-danger"></span>
+        <span asp-validation-for="TrackId" class="text-danger"></span>
     </div>
 
     <button type="submit" class="btn btn-success mt-3">Register</button>
